first update for the wadget

--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="ideas.css">
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="main-container">
+    <div class="first">
+      <div id="first-content">
+        <div>
+          <h1>Ideas?</h1>
+          <h5>This is just a place holder.</h5>
+          <p>You can remove any link to our website from this website template, you're free to use this website template without linking back to us.
+          </p>
+          <div class="button-container">
+            <div> 
+              <button type="button">try it now!</button>
+              <div><span>Don’t worry it’s for free</span></div>
+            </div>
+          </div>
+        </div>
+        <div><img src="/assets/box.png" alt="emailbox"></div>
+      </div>
+
+    </div>
+    <div class="second"></div>
+    <footer></footer>
+  </div>
 </body>
 </html>
