--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
           </div>
         </div>
-        <div><img src="/assets/box.png" alt="emailbox"></div>
+        <div id="image-container"><img src="/assets/box.png" alt="emailbox"></div>
       </div>
 
     </div>
