use of html entities

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
           <div class="button-container">
             <div> 
               <button type="button">try it now!</button>
-              <div><span>Don’t worry it’s for free</span></div>
+              <div><span>Don&apos;t worry it&apos;s for free</span></div>
             </div>
           </div>
         </div>
         <div id="image-container"><img src="/assets/box.png" alt="emailbox"></div>
       </div>
-
     </div>
-    <div class="second"></div>
+    <div class="second">
+    </div>
     <footer></footer>
   </div>
 </body>
