second widget design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
           <h1>Ideas?</h1>
           <h5>This is just a place holder.</h5>
-          <p>You can remove any link to our website from this website template, you're free to use this website template without linking back to us.
+          <p id="first-para">You can remove any link to our website from this website template, you're free to use this website template without linking back to us.
           </p>
           <div class="button-container">
             <div> 
@@ -27,6 +27,25 @@
       </div>
     </div>
     <div class="second">
+      <div class="second-content">
+        <h5>This is just a place holder.</h5>
+        <div class="content">
+          <div>
+            <p>You can remove any link to our website from this website template, you're free to use this website template without linking back to us.</p>
+            <p>This is just a place holder, so you can see what the site would look like.</p>
+            <p>You can remove any link to our website from this website template, you're free to use this website template without linking back to us. This is just a place holder, so you can see what the site would look like.</p>
+          </div>
+          <div>
+            <P>You can remove any link to our website from this website template, you're free to use this website template without linking back to us.</P>
+            <P>This is just a place holder, so you can see what the site would look like.</P>
+            <P>You can remove any link to our website from this website template, you're free to use this website template without linking back to us. This is just a place holder, so you can see what the site would look like.</P>
+            <div></div>
+          </div>
+
+
+        </div>
+
+      </div>
     </div>
     <footer></footer>
   </div>
