font awesome library included

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="ideas.css">
   <title>Document</title>
 </head>
@@ -41,13 +42,12 @@
             <P>You can remove any link to our website from this website template, you're free to use this website template without linking back to us. This is just a place holder, so you can see what the site would look like.</P>
             <div></div>
           </div>
-
-
         </div>
-
       </div>
     </div>
-    <footer></footer>
+    <footer>
+
+    </footer>
   </div>
 </body>
 </html>
