--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
       </div>
     </div>
     <footer>
-
+      <div id="main-footer">
+        <div><span>&copy;2023 Zerotype. All Rights Reserved.</span></div>
+        <div class="icon-container">
+          <div><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></div>
+          <div><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></div>
+          <div><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
+          <div><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
