navigation menu completed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
   <title>Document</title>
 </head>
 <body>
+  <nav>
+    <div>
+      <!-- <div><a href="#"><img src="/assets/logo.png" alt="" ><div><span>zero type</span></div></a></div> -->
+      <div class="menus">
+        <a href="#"><img src="/assets/logo.png" alt="" ><div><span>zero type</span></div></a>
+        <a href="#" class="active">Home</a>
+        <a href="#">Features</a>
+        <div class="drop-down">
+          <a href="#">News</a>
+          <div class="drop-down-content">
+            <a href="#">Single Post</a>
+            <a href="#">Another Single Post</a>
+            <a href="#">Complete blog</a>
+          </div>
+        </div>
+        <a href="#">About</a>
+        <a href="#">Contacts</a>
+
+      </div>
+    </div>
+  </nav>
   <div class="main-container">
     <div class="first">
       <div id="first-content">
